Fixed java reflection issue